--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -2,3 +2,6 @@ project_id = "qxauhjxjqyesvqdzxbnh"
 
 [functions.process-sale]
 verify_jwt = true
+
+[functions.database-cleanup]
+verify_jwt = false
